--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -87,6 +87,7 @@
     <Content Include="source\js\expanz\client\requestBody.js" />
     <Content Include="source\js\expanz\client\requestBuilder.js" />
     <Content Include="source\js\expanz\client\responseParser.js" />
+    <Content Include="source\js\expanz\expanz.messageController.js" />
     <Content Include="source\js\expanz\menu\AppSiteMenu.js" />
     <Content Include="source\js\expanz\menu\ActivityMenu.js" />
     <Content Include="source\js\expanz\menu\ProcessAreaMenu.js" />
