--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -88,9 +88,12 @@
     <Content Include="source\js\expanz\client\requestBuilder.js" />
     <Content Include="source\js\expanz\client\responseParser.js" />
     <Content Include="source\js\expanz\expanz.messageController.js" />
+    <Content Include="source\js\expanz\expanz.security.js" />
     <Content Include="source\js\expanz\menu\AppSiteMenu.js" />
     <Content Include="source\js\expanz\menu\ActivityMenu.js" />
     <Content Include="source\js\expanz\menu\ProcessAreaMenu.js" />
+    <Content Include="source\js\expanz\models\expanz.models.Message.js" />
+    <Content Include="source\js\expanz\models\expanz.models.MessageCollection.js" />
     <Content Include="source\js\expanz\models\data\expanz.models.data.DataControl.js" />
     <Content Include="source\js\expanz\models\data\expanz.models.data.Grid.js" />
     <Content Include="source\js\expanz\models\data\expanz.models.data.Row.js" />
@@ -105,6 +108,7 @@
     <Content Include="source\js\expanz\models\expanz.models.Login.js" />
     <Content Include="source\js\expanz\models\expanz.models.MenuAction.js" />
     <Content Include="source\js\expanz\models\expanz.models.Method.js" />
+    <Content Include="source\js\expanz\views\expanz.views.MessagesView.js" />
     <Content Include="source\js\expanz\views\expanz.views.ManuallyClosedPopup.js" />
     <Content Include="source\js\expanz\views\expanz.views.UIMessage.js" />
     <Content Include="source\js\expanz\views\expanz.views.PicklistWindowView.js" />
