--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -58,13 +58,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
-    <Content Include="Scripts\backbone.js" />
-    <Content Include="Scripts\backbone.min.js" />
-    <Content Include="Scripts\jquery-1.8.2.js" />
-    <Content Include="Scripts\jquery-1.8.2.min.js" />
-    <Content Include="Scripts\underscore.js" />
-    <Content Include="Scripts\underscore.min.js" />
+    <Content Include="source\js\libs\backbone.js" />
+    <Content Include="source\js\libs\backbone.min.js" />
+    <None Include="source\js\libs\jquery-1.8.3.intellisense.js" />
+    <Content Include="source\js\libs\jquery-1.8.3.js" />
+    <Content Include="source\js\libs\jquery-1.8.3.min.js" />
+    <Content Include="source\js\libs\underscore.js" />
+    <Content Include="source\js\libs\underscore.min.js" />
     <Content Include="source\js\adapters\.gitignore" />
     <Content Include="source\js\adapters\KendoTimePickerAdapter.js" />
     <Content Include="source\js\adapters\KendoDatePickerAdapter.js" />
@@ -79,6 +79,7 @@
     <Content Include="source\js\adapters\min\.gitignore" />
     <Content Include="source\js\adapters\min\expanz.kendo.adapters.all.min.js" />
     <Content Include="source\js\adapters\min\expanz.kendo.adapters.all.ycomp.js" />
+    <Content Include="source\js\adapters\TimeInputAdapter.js" />
     <Content Include="source\js\components\core.js" />
     <Content Include="source\js\components\shoppingCart.js" />
     <Content Include="source\js\expanz\client\ActivityInfo.js" />
@@ -107,6 +108,7 @@
     <Content Include="source\js\expanz\models\expanz.models.Login.js" />
     <Content Include="source\js\expanz\models\expanz.models.MenuAction.js" />
     <Content Include="source\js\expanz\models\expanz.models.Method.js" />
+    <Content Include="source\js\expanz\views\expanz.views.DataFieldView.js" />
     <Content Include="source\js\expanz\views\expanz.views.MessagesView.js" />
     <Content Include="source\js\expanz\views\expanz.views.ManuallyClosedPopup.js" />
     <Content Include="source\js\expanz\views\expanz.views.UIMessage.js" />
