--- a/packages.config
+++ b/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Backbone.js" version="0.9.2" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="underscore.js" version="1.3.3" targetFramework="net45" />
 </packages>
