--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -65,13 +65,6 @@
     <Content Include="build\expanz-components.min.js">
       <DependentUpon>expanz-components.js.bundle</DependentUpon>
     </Content>
-    <Content Include="source\js\libs\jquery.cookies.2.2.0.js" />
-    <Content Include="source\js\libs\jquery.cookies.2.2.0.min.js" />
-    <Content Include="source\js\libs\jquery.i18n.properties-1.0.9.js" />
-    <Content Include="source\js\libs\jquery.i18n.properties-min-1.0.9.js" />
-    <Content Include="source\js\libs\modernizr-2.6.2.js" />
-    <Content Include="source\js\libs\backbone.js" />
-    <Content Include="source\js\libs\backbone.min.js" />
     <Content Include="build\expanz-kendoui-adapters.min.js.map">
       <DependentUpon>expanz-kendoui-adapters.js.bundle</DependentUpon>
     </Content>
@@ -80,6 +73,20 @@
     <Content Include="build\ajaxmin\AjaxMinTask.targets">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="source\js\lib\backbone.js" />
+    <Content Include="source\js\lib\backbone.min.js" />
+    <Content Include="source\js\lib\jquery-1.7.1.js" />
+    <None Include="source\js\lib\jquery-1.8.3.intellisense.js" />
+    <Content Include="source\js\lib\jquery-1.8.3.js" />
+    <Content Include="source\js\lib\jquery-1.8.3.min.js" />
+    <Content Include="source\js\lib\jquery-ui-1.8.16.custom.min.js" />
+    <Content Include="source\js\lib\jquery.cookies.2.2.0.js" />
+    <Content Include="source\js\lib\jquery.cookies.2.2.0.min.js" />
+    <Content Include="source\js\lib\jquery.i18n.properties-1.0.9.js" />
+    <Content Include="source\js\lib\jquery.i18n.properties-min-1.0.9.js" />
+    <Content Include="source\js\lib\modernizr-2.6.2.js" />
+    <Content Include="source\js\lib\underscore.js" />
+    <Content Include="source\js\lib\underscore.min.js" />
     <None Include="build\ajaxmin\expanz-sdk.ajaxmin">
       <SubType>Designer</SubType>
     </None>
@@ -95,11 +102,6 @@
     <Content Include="build\expanz-components.min.js.map">
       <DependentUpon>expanz-components.js.bundle</DependentUpon>
     </Content>
-    <None Include="source\js\libs\jquery-1.8.3.intellisense.js" />
-    <Content Include="source\js\libs\jquery-1.8.3.js" />
-    <Content Include="source\js\libs\jquery-1.8.3.min.js" />
-    <Content Include="source\js\libs\underscore.js" />
-    <Content Include="source\js\libs\underscore.min.js" />
     <Content Include="source\js\adapters\KendoTimePickerAdapter.js" />
     <Content Include="source\js\adapters\KendoDatePickerAdapter.js" />
     <Content Include="source\js\adapters\KendoAdapter.js" />
