--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -68,14 +68,14 @@
     <Content Include="build\expanz-kendoui-adapters.min.js.map">
       <DependentUpon>expanz-kendoui-adapters.js.bundle</DependentUpon>
     </Content>
-    <Content Include="build\expanz-javascript-sdk-source.1.0.0.nupkg" />
-    <Content Include="build\expanz-javascript-sdk.1.0.0.nupkg" />
     <Content Include="build\ajaxmin\AjaxMinTask.targets">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="source\js\lib\backbone.js" />
     <Content Include="source\js\lib\backbone.min.js" />
     <Content Include="source\js\lib\jquery-1.7.1.js" />
+    <Content Include="build\expanz-javascript-sdk-source.nuspec" />
+    <Content Include="build\expanz-javascript-sdk.nuspec" />
     <None Include="source\js\lib\jquery-1.8.3.intellisense.js" />
     <Content Include="source\js\lib\jquery-1.8.3.js" />
     <Content Include="source\js\lib\jquery-1.8.3.min.js" />
