Building the HTMLSDK project now builds the NuGet packages.  Updated documentation to reflect this, and provide configuration instructions.

--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -199,6 +199,10 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>$(ProjectDir)build\nuget.exe pack $(ProjectDir)build\expanz-javascript-sdk.nuspec -OutputDirectory $(ProjectDir)build\
+$(ProjectDir)build\nuget.exe pack $(ProjectDir)build\expanz-javascript-sdk-source.nuspec -OutputDirectory $(ProjectDir)build\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
