--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -67,7 +67,9 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="source\js\adapters\BreadcrumbAdapter.js" />
+    <Content Include="source\js\expanz\models\expanz.models.CustomContent.js" />
     <Content Include="source\js\expanz\models\expanz.models.DataPublication.js" />
+    <Content Include="source\js\expanz\views\expanz.views.CustomContentView.js" />
     <Content Include="source\js\expanz\views\expanz.views.DataPublicationView.js" />
     <Content Include="source\js\expanz\views\subviews\expanz.views.subviews.DataPublicationBodyView.js" />
     <Content Include="source\js\expanz\views\subviews\expanz.views.subviews.DataPublicationHeaderView.js" />
