--- a/HTMLSDK.csproj
+++ b/HTMLSDK.csproj
@@ -67,6 +67,7 @@
       <SubType>Designer</SubType>
     </None>
     <Content Include="source\js\adapters\BreadcrumbAdapter.js" />
+    <Content Include="source\js\expanz\client\GridViewInfo.js" />
     <Content Include="source\js\expanz\models\expanz.models.CustomContent.js" />
     <Content Include="source\js\expanz\models\expanz.models.DataPublication.js" />
     <Content Include="source\js\expanz\views\expanz.views.CustomContentView.js" />
